<resources>
    <string name="app_name">My Application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="concerned">concerned</string>
    <string name="hot">hot</string>
    <string name="all">all</string>
    <string name="reviewnumber">reviewnumber</string>
    <string name="number">4000</string>
    <string name="pushtime">pushtime</string>
    <string name="time">18/09/2021</string>
    <string name="good">like</string>
    <string name="share">share</string>
    <string name="P">Post</string>
    <string name="comment">comment</string>
    <string name="search">search</string>
    <string name="FavoritePost">FavoritePosts</string>
    <string name="AllPost">AllPost</string>
</resources>