<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".allpost">

    <Button
        android:id="@+id/concern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/concerned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/hot"
        app:layout_constraintStart_toEndOf="@+id/concern"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/All"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/all"
        app:layout_constraintStart_toEndOf="@+id/Hot"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/all_post_list"
        android:layout_width="415dp"
        android:layout_height="524dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hot"
        app:layout_constraintVertical_bias="0.537" />
</androidx.constraintlayout.widget.ConstraintLayout>